version/0.78/_sources/autoapi/pyedb/misc/siw_feature_config/xtalk_scan/fd_xtalk_scan_config/CrosstalkFrequency.rst.txt






:class:`CrosstalkFrequency`
===========================


.. py:class:: pyedb.misc.siw_feature_config.xtalk_scan.fd_xtalk_scan_config.CrosstalkFrequency(pedb)

   
   SIwave frequency domain crosstalk configuration handler.

   This class manages frequency domain crosstalk scanning configuration including
   transmission line segment length, frequency, and net-specific crosstalk thresholds.

   :Parameters:

       **pedb** : :obj:`object`
           PyEDB instance.













   .. rubric:: Examples

   >>> from pyedb import Edb
   >>> edb = Edb("path/to/aedb")
   >>> xtalk_freq = CrosstalkFrequency(edb)
   >>> xtalk_freq.min_transmission_line_segment_length = "0.5mm"
   >>> xtalk_freq.frequency = "5e9Hz"
   >>> xtalk_freq.add_single_ended_net("USB_DP", next_warning_threshold=3.0, fext_warning_threshold=2.0)

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CrosstalkFrequency

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~extend_xml`
            - Write class XML section.
          * - :py:attr:`~add_single_ended_net`
            - Add single ended net to frequency domain crosstalk configuration.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~min_transmission_line_segment_length`
            - 
          * - :py:attr:`~frequency`
            - 
          * - :py:attr:`~nets`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.misc.siw_feature_config.xtalk_scan.fd_xtalk_scan_config import CrosstalkFrequency


Attribute detail
----------------

.. py:attribute:: min_transmission_line_segment_length
   :type:  str
   :value: '0.25mm'


.. py:attribute:: frequency
   :type:  str
   :value: '2e9Hz'


.. py:attribute:: nets
   :type:  dict[str, pyedb.misc.siw_feature_config.xtalk_scan.net.SingleEndedNet]



Method detail
-------------

.. py:method:: extend_xml(parent) -> None

   
   Write class XML section.


   :Parameters:

       **parent** : :obj:`xml.etree.ElementTree.Element`
           Parent XML element to extend.














   ..
       !! processed by numpydoc !!

.. py:method:: add_single_ended_net(name: str, next_warning_threshold: float | str = 5.0, next_violation_threshold: float | str = 10.0, fext_warning_threshold_warning: float | str = 5.0, fext_violation_threshold: float | str = 5.0) -> bool

   
   Add single ended net to frequency domain crosstalk configuration.


   :Parameters:

       **name** : :class:`python:str`
           Net name.

       **next_warning_threshold** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Near end crosstalk warning threshold value in dB.
           The default is ``5.0``.

       **next_violation_threshold** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Near end crosstalk violation threshold value in dB.
           The default is ``10.0``.

       **fext_warning_threshold_warning** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Far end crosstalk warning threshold value in dB.
           The default is ``5.0``.

       **fext_violation_threshold** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Far end crosstalk violation threshold value in dB.
           The default is ``5.0``.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           ``True`` if the net was added successfully, ``False`` otherwise.










   .. rubric:: Examples

   >>> xtalk_freq = CrosstalkFrequency(pedb)
   >>> xtalk_freq.add_single_ended_net("USB_DP", next_warning_threshold=3.0, fext_warning_threshold=2.0)
   True

   ..
       !! processed by numpydoc !!




